Fix for bug #15630: Test case failure in sp-dynamic, sp-error, and sp.

sql/sp_head.cc:
  Fix for bug #15630: Test case failure in sp-dynamic, sp-error, and sp.
  - should pass a *char to the my_error() instead of the structure.